[gd_scene load_steps=9 format=2]

[ext_resource path="res://Units/Unit.gd" type="Script" id=1]
[ext_resource path="res://Tools/Selection.png" type="Texture" id=2]
[ext_resource path="res://Tools/LifeBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Tools/Smoker/Smoker.tscn" type="PackedScene" id=4]
[ext_resource path="res://Tools/Explosion/Explosion.tscn" type="PackedScene" id=5]
[ext_resource path="res://Units/explosion.ogg" type="AudioStream" id=6]
[ext_resource path="res://Units/engine_heavy_average_loop.ogg" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 24 )

[node name="Unit" type="Node2D"]
script = ExtResource( 1 )
Explosion = ExtResource( 5 )
sound_explosion = ExtResource( 6 )
sound_explosion_db = 5.0
sound_motor_db = -5.0

[node name="Tracks" type="Sprite" parent="."]
position = Vector2( -0.5, -0.5 )
rotation = -1.5708

[node name="Body" type="Sprite" parent="."]
position = Vector2( -0.5, -0.5 )
rotation = -1.5708

[node name="SelectionArea" type="Area2D" parent="."]
show_behind_parent = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="SelectionArea"]
show_behind_parent = true
shape = SubResource( 1 )

[node name="Selector" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="Movement" type="Tween" parent="."]

[node name="Repath" type="Timer" parent="."]

[node name="DebugPath" type="Line2D" parent="."]
visible = false
width = 2.0
default_color = Color( 1, 0.4, 0.4, 1 )

[node name="LifeBar" parent="." instance=ExtResource( 3 )]

[node name="Smoker" parent="." instance=ExtResource( 4 )]
position = Vector2( 0.567139, 1.6489 )
scale = Vector2( 0.5, 0.5 )

[node name="ToTarget" type="Line2D" parent="."]
z_index = 2
points = PoolVector2Array( 0, 0, 0, 0 )
width = 2.0
default_color = Color( 0, 1, 1, 1 )
antialiased = true

[node name="Motor" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -20.195
pitch_scale = 1.04
[connection signal="mouse_entered" from="SelectionArea" to="." method="_on_SelectionArea_mouse_entered"]
[connection signal="mouse_exited" from="SelectionArea" to="." method="_on_SelectionArea_mouse_exited"]
[connection signal="tween_all_completed" from="Movement" to="." method="_on_Movement_tween_all_completed"]
[connection signal="timeout" from="Repath" to="." method="_on_Repath_timeout"]
